--- a/src/index.html
+++ b/src/index.html
@@ -27,20 +27,13 @@
       </div>
       <div class="row justify-content-center">
         <div class="col-12">
-          <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Modali per tutti i Bottoni</title>
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-</head>
-<body>
+
+
   <nav>
     <div class="nav nav-tabs justify-content-center" id="nav-tab" role="tablist">
 
       <!-- Bottone e Modale per Dolomiti-Alpi Carniche -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAlpiCarniche">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAlpiCarniche" id="alpiCarnicheButton">
         Dolomiti-Alpi Carniche
       </button>
       <div class="modal fade" id="modalAlpiCarniche" tabindex="-1" aria-labelledby="modalAlpiCarnicheLabel" aria-hidden="true">
@@ -50,7 +43,8 @@
               <h1 class="modal-title fs-5" id="modalAlpiCarnicheLabel">Dolomiti-Alpi Carniche</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="alpiCarniche">
+
               Descrizione delle Dolomiti-Alpi Carniche.
             </div>
             <div class="modal-footer">
@@ -61,7 +55,7 @@
       </div>
 
       <!-- Bottone e Modale per Alpi Giulie-Isonzo-Basso Friuli -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAlpiGiulie">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalAlpiGiulie" id="alpiGiuliebutton">
         Alpi Giulie-Isonzo-Basso Friuli
       </button>
       <div class="modal fade" id="modalAlpiGiulie" tabindex="-1" aria-labelledby="modalAlpiGiulieLabel" aria-hidden="true">
@@ -71,7 +65,7 @@
               <h1 class="modal-title fs-5" id="modalAlpiGiulieLabel">Alpi Giulie-Isonzo-Basso Friuli</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="alpiGiulie">
               Descrizione delle Alpi Giulie, Isonzo e Basso Friuli.
             </div>
             <div class="modal-footer">
@@ -82,7 +76,7 @@
       </div>
 
       <!-- Bottone e Modale per Ortles-Cevedale-Adamello -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalOrtles">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalOrtles" id="ortlesCevedaleAdamelloButton">
         Ortles-Cevedale-Adamello
       </button>
       <div class="modal fade" id="modalOrtles" tabindex="-1" aria-labelledby="modalOrtlesLabel" aria-hidden="true">
@@ -92,7 +86,7 @@
               <h1 class="modal-title fs-5" id="modalOrtlesLabel">Ortles-Cevedale-Adamello</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="ortlesCevedaleAdamello">
               Descrizione di Ortles, Cevedale e Adamello.
             </div>
             <div class="modal-footer">
@@ -103,7 +97,7 @@
       </div>
 
       <!-- Bottone e Modale per Garda-Altipiani -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalGarda">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalGarda" id="gardaAltipianiButton">
         Garda-Altipiani
       </button>
       <div class="modal fade" id="modalGarda" tabindex="-1" aria-labelledby="modalGardaLabel" aria-hidden="true">
@@ -113,7 +107,7 @@
               <h1 class="modal-title fs-5" id="modalGardaLabel">Garda-Altipiani</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="gardaAltipiani">
               Descrizione di Garda e Altipiani.
             </div>
             <div class="modal-footer">
@@ -124,7 +118,7 @@
       </div>
 
       <!-- Bottone e Modale per Monte San Michele -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMonteSanMichele">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMonteSanMichele" id="monteSanMicheleButton">
         Monte San Michele
       </button>
       <div class="modal fade" id="modalMonteSanMichele" tabindex="-1" aria-labelledby="modalMonteSanMicheleLabel" aria-hidden="true">
@@ -134,7 +128,7 @@
               <h1 class="modal-title fs-5" id="modalMonteSanMicheleLabel">Monte San Michele</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="monteSanMichele">
               Descrizione del Monte San Michele.
             </div>
             <div class="modal-footer">
@@ -145,7 +139,7 @@
       </div>
 
       <!-- Bottone e Modale per Medio-basso Piave -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMedioBassoPiave">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMedioBassoPiave" id="medioBassoPiaveButton">
         Medio-basso Piave
       </button>
       <div class="modal fade" id="modalMedioBassoPiave" tabindex="-1" aria-labelledby="modalMedioBassoPiaveLabel" aria-hidden="true">
@@ -155,7 +149,7 @@
               <h1 class="modal-title fs-5" id="modalMedioBassoPiaveLabel">Medio-basso Piave</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div  class="modal-body" id="medioBassoPiave">
               Descrizione del Medio-basso Piave.
             </div>
             <div class="modal-footer">
@@ -166,7 +160,7 @@
       </div>
 
       <!-- Bottone e Modale per Monte Grappa -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMonteGrappa">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalMonteGrappa" id="monteGrappaButton">
         Monte Grappa
       </button>
       <div class="modal fade" id="modalMonteGrappa" tabindex="-1" aria-labelledby="modalMonteGrappaLabel" aria-hidden="true">
@@ -176,7 +170,7 @@
               <h1 class="modal-title fs-5" id="modalMonteGrappaLabel">Monte Grappa</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="monteGrappa">
               Descrizione del Monte Grappa.
             </div>
             <div class="modal-footer">
@@ -187,7 +181,7 @@
       </div>
 
       <!-- Bottone e Modale per Vittorio Veneto -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalVittorioVeneto">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalVittorioVeneto" id="vittorioVenetoButton">
         Vittorio Veneto
       </button>
       <div class="modal fade" id="modalVittorioVeneto" tabindex="-1" aria-labelledby="modalVittorioVenetoLabel" aria-hidden="true">
@@ -197,7 +191,7 @@
               <h1 class="modal-title fs-5" id="modalVittorioVenetoLabel">Vittorio Veneto</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="vittorioVeneto">
               Descrizione di Vittorio Veneto.
             </div>
             <div class="modal-footer">
@@ -208,7 +202,7 @@
       </div>
 
       <!-- Bottone e Modale per Trieste -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalTrieste">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalTrieste" id="triesteButton">
         Trieste
       </button>
       <div class="modal fade" id="modalTrieste" tabindex="-1" aria-labelledby="modalTriesteLabel" aria-hidden="true">
@@ -218,7 +212,7 @@
               <h1 class="modal-title fs-5" id="modalTriesteLabel">Trieste</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="trieste">
               Descrizione di Trieste.
             </div>
             <div class="modal-footer">
@@ -229,7 +223,7 @@
       </div>
 
       <!-- Bottone e Modale per Villa Giusti -->
-      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalVillaGiusti">
+      <button class="nav-link" data-bs-toggle="modal" data-bs-target="#modalVillaGiusti" id="villaGiustiButton">
         Villa Giusti
       </button>
       <div class="modal fade" id="modalVillaGiusti" tabindex="-1" aria-labelledby="modalVillaGiustiLabel" aria-hidden="true">
@@ -239,7 +233,7 @@
               <h1 class="modal-title fs-5" id="modalVillaGiustiLabel">Villa Giusti</h1>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
-            <div class="modal-body">
+            <div class="modal-body" id="villaGiusti">
               Descrizione di Villa Giusti.
             </div>
             <div class="modal-footer">
@@ -251,11 +245,6 @@
 
     </div>
   </nav>
-
-  <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"></script>
-</body>
-</html>
 
         </div>
       </div>
