--- a/src/index.html
+++ b/src/index.html
@@ -6,10 +6,10 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
       integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  <link rel="stylesheet" href="/htmlPages/styles/style.css">
-  <link rel="stylesheet" href="/htmlPages/styles/login.css">
-  <link rel="stylesheet" href="/htmlPages/styles/admin.css">
-  <link rel="stylesheet" href="/htmlPages/styles/adminTable.css">
+  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/style.css">
+  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/login.css">
+  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/admin.css">
+  <link rel="stylesheet" href="/5C_BrambillaBianchinDiDonna_POI/htmlPages/styles/adminTable.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
      crossorigin=""/>
@@ -282,7 +282,7 @@
   <div id="admin" class="pages hide">
     <div class="admin-container">
       <a href="#adminTable" style="text-decoration: none;">
-        <img src="/data/images/back.jpg" alt="" style="width: 10%;">
+        <img src="/5C_BrambillaBianchinDiDonna_POI/data/images/back.jpg" alt="" style="width: 10%;">
       </a>
       <h1>Admin</h1>
       <form>
@@ -360,7 +360,7 @@
         <tbody>
           <tr>
             <td>
-              <img src="/data/placesImage/Alpi Giulie-Isonzo-Basso Friuli.jpg"
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/Alpi Giulie-Isonzo-Basso Friuli.jpg"
                 alt="..." style="width: 30%;">
               <p>Alpi Giulie-Isonzo-Basso Friuli</p>
             </td>
@@ -373,7 +373,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/Dolomiti-Alpi Carniche.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/Dolomiti-Alpi Carniche.jpg" alt="..."
                 style="width: 30%;">
               <p>Dolomiti-Alpi Carniche</p>
             </td>
@@ -386,7 +386,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/garda altipiani.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/garda altipiani.jpg" alt="..."
                 style="width: 30%;">
               <p>Garda Altipiani</p>
             </td>
@@ -399,7 +399,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/medi-basso piave.jpg" alt="..."style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/medi-basso piave.jpg" alt="..."style="width: 30%;">
               <p>Medio-Basso Piave</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -411,7 +411,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/monte grappa.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/monte grappa.jpg" alt="..."
                 style="width: 30%;">
               <p>Monte Grappa</p>
             </td>
@@ -424,7 +424,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/monte san michele.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/monte san michele.jpg" alt="..."
                 style="width: 30%;">
               <p>Monte San Michele</p>
             </td>
@@ -437,7 +437,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/ortles cevedale adamello.jpg" alt="" style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/ortles cevedale adamello.jpg" alt="" style="width: 30%;">
               <p>Ortles Cevedale Adamello</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -449,7 +449,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/trieste.jpg" alt="..." style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/trieste.jpg" alt="..." style="width: 30%;">
               <p>Trieste</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -461,7 +461,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/villa giusti.jpg" alt="..." style="width: 30%;">
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/villa giusti.jpg" alt="..." style="width: 30%;">
               <p>Villa Giusti</p>
             </td>
             <td><a href="#admin" style="text-decoration: none;">
@@ -473,7 +473,7 @@
           <tr>
             <td>
 
-              <img src="/data/placesImage/vittorio veneto.jpg" alt="..."
+              <img src="/5C_BrambillaBianchinDiDonna_POI/data/placesImage/vittorio veneto.jpg" alt="..."
                 style="width: 30%;">
               <p>Vittorio Veneto</p>
             </td>
@@ -488,7 +488,7 @@
     </div>
   </div>
 
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="/5C_BrambillaBianchinDiDonna_POI/src/index.js"></script>
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"
   integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
 
